Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-26 Kimmo
 Perry is not active developer
  Docs/Users: Contributors.txt

2006-11-25 Kimmo
 PATCH: [ 1602365 ] Move SelectFile and SelectFolder routines to separate file
  Src: DirActions.cpp DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp
   Merge.dsp Merge.h MergeDoc.cpp OpenDlg.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp
   PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp
  Src new files: FileOrFolderSelect.cpp FileOrFolderSelect.h

2006-11-24 Kimmo
 Fix bunch of doxygen warnings (wrong parameter names etc)
  Src: CmdLineParser.h DiffWrapper.cpp DirDoc.cpp FilepathEdit.cpp files.cpp
   paths.cpp PropEditor.cpp WMGotoDlg.h

2006-11-23 WinMerge experimental release 2.7.1.2 (SVN revision 3844)

2006-11-23 Kimmo
 PATCH: [ 1512881 ] Fix memleak from charsets.c
  Src: charsets.cp charsets.h Merge.cpp
 PATCH: [ 1596285 ] Unresolved external symbol __abs64 with VC7.1
  Submitted by Gal, minor edit by Kimmo
  Src: StdAfx.cpp StdAfx.h
 BUG: [ 1584068 ] location pane is inaccurate when word wrap is on
  Fix submitted by Gal
  Src: LocationView.cpp

2006-11-22 Kimmo
 PATCH: [ 1600714 ] Allow canceling when started from commandline
  Src: Merge.cpp Merge.h

2006-11-21 Kimmo
 PATCH: [ 1600000 ] Fix project file Has*() functions
  Src: ProjectFile.cpp ProjectFile.h

2006-11-20 Kimmo
 BUG: [ 1599631 ] WinMerge 2.7.1.1 ignores left dir in project file
  Src: ProjectFile.cpp

2006-11-17 Gal
 PATCH: [ 1590831 ] Handle minimize argument (Bug 1570351)
  Src: MergeDiffDetailView.cpp
  Src/Common: SplitterWndEx.cpp

2006-11-17 Gal
 PATCH: [ 1598194 ] New command line parser
  Src: MainFrm.cpp Merge.cpp Merge.dsp Merge.h
  Src added files: ClearCaseCmdLineParser.cpp ClearCaseCmdLineParser.h
   CmdLineParser.h MergeCmdLineInfo.cpp MergeCmdLineInfo.h
   WinMergeCmdLineParser.cpp WinMergeCmdLineParser.h